<resources>
    <string name="app_name">LO QUIERO</string>

    <string name="editTextName">Usuario</string>
    <string name="editTextPassword">Contraseña</string>
    <string name="editTextBuscarProducto">Buscar producto</string>
    <string name="editTextBuscarTienda">Buscar tienda</string>

    <string name="labelNombre">Nombre</string>
    <string name="labelDesc">Descripción</string>
    <string name="labelPrecio">Precio</string>
    <string name="labelCategoria">Categoría</string>
    <string name="labelTienda">Tienda</string>
    <string name="labelLocalizacion">Localización</string>
    <string name="labelCalle">Calle</string>
    <string name="labelLongitud">Longitud</string>
    <string name="labelLatitud">Latitud</string>
    <string name="labelTitulo" translatable="false">¡LO QUIERO!</string>
    <string name="labelIdioma" translatable="false">Selecciona un idioma</string>

    <string name="txtSoloTenderos">Esta área se utiliza exclusivamente para aquellos empresarios afiliados con nuestro servicio</string>
    <string name="txtSloganEs" translatable="false">Bienvenido al escaparate más molón en la palma de tu mano</string>
    <string name="txtSloganEn" translatable="false">Welcome to the coolest storefront in the palm of your hand</string>
    <string name="txtSloganEu" translatable="false">Ongi etorri esku-ahurrean dagoen erakusleihorik ederrenera</string>

    <string name="btn_Login">INICIAR SESIÓN</string>
    <string name="btnProductos">PRODUCTOS</string>
    <string name="btnTiendas">TIENDAS</string>
    <string name="btnTenderos">TENDEROS</string>
    <string name="btnLogin">INICIAR SESIÓN</string>
    <string name="btnVolver">VOLVER</string>
    <string name="btnGuardar">GUARDAR CAMBIOS</string>
    <string name="btnAgregarProducto">AÑADIR PRODUCTO</string>
    <string name="btnAgregarTienda">AÑADIR TIENDA</string>
    <string name="btnBorrarProducto">BORRAR PRODUCTO</string>
    <string name="btnBorrarTienda">BORRAR TIENDA</string>
    <string name="btnNuevoProducto">NUEVO PRODUCTO</string>
    <string name="btnNuevaTienda">NUEVA TIENDA</string>
    <string name="btnBuscar">BUSCAR</string>

    <string name="langName">Elige el idioma</string>
    <string-array name="languagesName">
        <item>English</item>
        <item>Castellano</item>
        <item>Euskera</item>
    </string-array>
    <string-array name="languagesCode">
        <item>en</item>
        <item>es</item>
        <item>eu</item>
    </string-array>
    <string name="alertOkMSG" translatable="false">Ok</string>
    <string name="alertDenyMSG" translatable="false">Cancel</string>

</resources>