<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- patata-->

    <Button
        android:id="@+id/btnProductos"
        android:layout_width="408dp"
        android:layout_height="71dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/customize_buttons4"
        android:text="@string/btnProductos"
        android:visibility="visible"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnTiendas"
        android:layout_width="408dp"
        android:layout_height="71dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/customize_button3"
        android:text="@string/btnTiendas"
        android:visibility="visible"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.848"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnTenderos"
        android:layout_width="408dp"
        android:layout_height="71dp"
        android:layout_marginEnd="5dp"
        android:text="@string/btnTenderos"
        android:visibility="visible"
        android:background="@drawable/customize_button2"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.986"
        tools:visibility="visible" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="369dp"
        android:layout_height="398dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/carrito">

    </com.airbnb.lottie.LottieAnimationView>
</androidx.constraintlayout.widget.ConstraintLayout>